# serena

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
example-site/: index.html
scripts/: release.sh
src/: common.rs  content_type.rs  file_watcher.rs  handlers.rs  main.rs  opts.rs  statics.rs  watch.rs
