[package]
name = "tennis"
version = "0.1.0"
authors = ["Nick Gravelyn <nick@nickgravelyn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
futures = { version = "0.3.13", features = ["thread-pool"] }
hyper = { version = "0.14.5", features = ["full"] }
notify = "4.0.15"
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }
tokio-util = { version = "0.6.5", features = ["codec"] }
warp = "0.3.0"
