[package]
name = "tennis"
description = "A small static site server for local development"
version = "0.1.0"
authors = ["Nick Gravelyn <nick@nickgravelyn.com>"]
edition = "2018"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "2.33.3"

[dependencies.notify]
version = "4.0.15"

[dependencies.futures]
version = "0.3.13"
features = [
    "thread-pool"
]

[dependencies.hyper]
version = "0.14.5"
features = [
    "server",
    "stream",
    "http1",
    "tcp"
]

[dependencies.tokio]
version = "1.4.0"
features = [
    "rt-multi-thread", 
    "sync", 
    "fs", 
    "macros"
] 

[dependencies.tokio-stream]
version = "0.1.5"
features = [
    "sync"
]

[dependencies.tokio-util]
version = "0.6.5"
features = [
    "codec"
]
