[package]
name = "serena"
description = "Fast and lightweight static site server for local development."
version = "1.3.0"
authors = ["Kelly Gravelyn <kelly@kellyrenee.me>"]
edition = "2018"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2" }
notify = { version = "4" }
futures = { version = "0.3", features = ["thread-pool"] }
hyper = { version = "0.14", features = ["server", "stream", "http1", "tcp"] }
mime_guess = { version = "2" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.6", features = ["codec"] }
webbrowser = { version = "0.5" }
